<resources>
    <string name="app_name">Calculadora</string>
    <string name="txttitulo">Calculadora</string>
    <string name="imatitulo">signos</string>
    <string name="txtTitulos">MENU</string>
    <string name="txtIntruciones">Elige un Numero</string>
    <string name="imaMas">mas</string>
    <string name="txtMas">1. SUMA</string>
    <string name="txtMenos">2. RESTA</string>
    <string name="imaNenos">nemos</string>
    <string name="txtPor">3. MULTIPLICAR</string>
    <string name="txtDivicion">4. DIVICION</string>
    <string name="respuesta">Escribe un Numero corespondiente</string>
    <string name="cajarespuesta">Elije un Numero</string>
    <string name="imaPor">MULTIPLICAR</string>
    <string name="imaDivicion">divicion</string>
    <string name="btnSiguiente">SIGUIENTE</string>
    <string name="txtNenuMas">1.          MAS</string>
    <string name="IMAmas2">mas2</string>
    <string name="imaeltxt">fonfo</string>
    <string name="imas">ya?</string>
    <string name="btnRegreso">REGUESO</string>
    <string name="cajaN1SUMA">Primer numero</string>
    <string name="cajaN2SUMA">Segundo numero</string>
    <string name="btnResultadoSuma">RESULTADO</string>
    <string name="cajaResultado">Resultado es</string>
    <string name="caja1">Primer Numero</string>
    <string name="cja2">Segundo Numero</string>
    <string name="cajaRs">Resultado Es</string>
    <string name="txtResta">2. Resta</string>
    <string name="imaResr">res</string>
    <string name="cajaN1R">primer numero</string>
    <string name="cajaN2R">Segundo numero</string>
    <string name="cajaSE">Segundo Numero</string>
    <string name="cajaprimer">Primer Numero</string>
    <string name="cajaSegundo">Segundo Numero</string>
    <string name="cajaSegun">senundo termino</string>
    <string name="btrResta">Resta</string>
    <string name="cajaNRR">Respusta</string>
    <string name="cajar">Respuesta Es</string>
    <string name="btrRe">Regueso</string>
    <string name="txtticle">MULTIPLICAR</string>
    <string name="IMAMUTY">muty</string>
    <string name="cajawert">nombre</string>
    <string name="cajamulp">Primer Numero</string>
    <string name="caj">vygui</string>
    <string name="cajasm">Segundo Numero</string>
    <string name="btrMulti">Multiplicar</string>
    <string name="cajat">gofg</string>
    <string name="cjaRES">Respuesta Es</string>
    <string name="btrResgueso">Resgueso</string>
    <string name="txtdiv">Divicion</string>
    <string name="imadivi">divi</string>
    <string name="CDACIV">CB HDBIO</string>
    <string name="cajadivicion1">Primer Numero</string>
    <string name="cajadivi2">Segundo Numero</string>
    <string name="caja2di">Segundo Numero</string>
    <string name="btrmul">Dividir</string>
    <string name="Clahid">gd9yg9</string>
    <string name="cajresultado">Resultado Es</string>
    <string name="btrsali">Regueso</string>
</resources>
